# a1hilfe

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile-nginx  README.md  book.orig.toml  book.prod.toml  book.toml  custom.css  handle-old-container.sh  nginx.conf  notes.md
.github/workflows/: deploy-prod.yaml  hilfe-dev.yaml  hilfe-pr.yaml  hilfe-prod.yaml  releasenotes-deploy.yaml  releasenotes-pr.yaml
hilfe/: .dockerignore  .editorconfig  custom.css  handle-old-container.sh
hilfe/pdf_pipeline/: package-lock.json  package.json
hilfe/src/: SUMMARY.md
pdf_pipeline/: README.md  build_pdf.js  split_print.js
releasenotes/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md
releasenotes/migrations/: 0001_init.sql
releasenotes/rest/: workitems.http
src/: SUMMARY.md  abkuendigungen.rs  db.rs  devops.rs  index.md  main.rs  releasenotes.rs
src/a_eins_app/: a_eins_app_dashboard.md  optionen.md
src/a_eins_faq/: allgemeine_programmfunktionen.md  artikel.md  finanzbuchhaltung.md  vorgang.md
src/abschluesse_inventur/: index.md  monatsabschluss_fibu.md
src/allgemeine_programmfunktionen/: abgekuendigte_proramm_module.md  generelle_programmbedienung.md  hinweis_auswahlliste.md  index.md  versionen.md
src/artikel_bestandsuebersicht/: index.md
src/artikelstamm_und_artikel/: artikelstamm_duplizieren.md  artikelstamm_und_artikel_uebersicht.md  index.md  individuelle_artikelnummern.md  zuordnung_von_bildern.md
src/dokumentenverwaltung/: archiv_barcode.md  archiv_dokumente_hinzufuegen.md  archiv_fakte.md  archiv_vorschau.md  (+3 more)
(+6485 files in other folders)
